@@ -1,5 +1,7 @@
 package se.sundsvall.disturbance.integration.db;
 
+import static java.time.OffsetDateTime.now;
+import static java.time.ZoneId.systemDefault;
 import static java.time.temporal.ChronoUnit.SECONDS;
 import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -38,7 +40,7 @@ import se.sundsvall.disturbance.integration.db.model.DisturbanceEntity;
 @ActiveProfiles("junit")
 @Sql(scripts = {
 	"/db/scripts/truncate.sql",
-	"/db/scripts/testdata.sql"
+	"/db/scripts/testdata-junit.sql"
 })
 class DisturbanceRepositoryTest {
 
@@ -69,13 +71,13 @@ class DisturbanceRepositoryTest {
 		assertThat(disturbance.getAffectedEntities()).extracting(AffectedEntity::getPartyId, AffectedEntity::getFacilityId, AffectedEntity::getCoordinates)
 			.containsExactly(tuple("partyId-1", "facility-1", "coordinates-1"));
 		assertThat(disturbance.getDisturbanceId()).isEqualTo("persistAndFetch-disturbanceId");
-		assertThat(disturbance.getCategory()).isEqualTo(COMMUNICATION.toString());
-		assertThat(disturbance.getCreated()).isCloseTo(OffsetDateTime.now(), within(2, SECONDS));
+		assertThat(disturbance.getCategory()).isEqualTo(COMMUNICATION);
+		assertThat(disturbance.getCreated()).isCloseTo(now(systemDefault()), within(2, SECONDS));
 		assertThat(disturbance.getDeleted()).isFalse();
 		assertThat(disturbance.getDescription()).isEqualTo("description");
-		assertThat(disturbance.getPlannedStartDate()).isCloseTo(OffsetDateTime.now(), within(2, SECONDS));
-		assertThat(disturbance.getPlannedStopDate()).isCloseTo(OffsetDateTime.now().plusDays(6), within(2, SECONDS));
-		assertThat(disturbance.getStatus()).isEqualTo(OPEN.toString());
+		assertThat(disturbance.getPlannedStartDate()).isCloseTo(now(systemDefault()), within(2, SECONDS));
+		assertThat(disturbance.getPlannedStopDate()).isCloseTo(now(systemDefault()).plusDays(6), within(2, SECONDS));
+		assertThat(disturbance.getStatus()).isEqualByComparingTo(OPEN);
 	}
 
 	@Test
@@ -169,9 +171,9 @@ class DisturbanceRepositoryTest {
 			.hasSize(3)
 			.extracting(DisturbanceEntity::getId, DisturbanceEntity::getCategory)
 			.containsExactly(
-				tuple(2L, COMMUNICATION.toString()),
-				tuple(4L, COMMUNICATION.toString()),
-				tuple(11L, COMMUNICATION.toString()));
+				tuple(2L, COMMUNICATION),
+				tuple(4L, COMMUNICATION),
+				tuple(11L, COMMUNICATION));
 	}
 
 	@Test
@@ -180,11 +182,12 @@ class DisturbanceRepositoryTest {
 
 		assertThat(disturbances)
 			.isNotEmpty()
-			.hasSize(2)
+			.hasSize(3)
 			.extracting(DisturbanceEntity::getId, DisturbanceEntity::getStatus)
 			.containsExactly(
-				tuple(4L, CLOSED.toString()),
-				tuple(10L, CLOSED.toString()));
+				tuple(4L, CLOSED),
+				tuple(10L, CLOSED),
+				tuple(15L, CLOSED));
 	}
 
 	@Test
@@ -196,23 +199,44 @@ class DisturbanceRepositoryTest {
 			.hasSize(3)
 			.extracting(DisturbanceEntity::getId, DisturbanceEntity::getCategory, DisturbanceEntity::getStatus)
 			.containsExactly(
-				tuple(4L, COMMUNICATION.toString(), CLOSED.toString()),
-				tuple(10L, ELECTRICITY.toString(), CLOSED.toString()),
-				tuple(12L, ELECTRICITY.toString(), PLANNED.toString()));
+				tuple(4L, COMMUNICATION, CLOSED),
+				tuple(10L, ELECTRICITY, CLOSED),
+				tuple(12L, ELECTRICITY, PLANNED));
+	}
+
+	@Test
+	void deleteByCreatedBeforeAndStatusIn() {
+
+		// Arrange
+		final var deleteOlderThanMonths = 24;
+		final var expiryDate = now(systemDefault()).minusMonths(deleteOlderThanMonths);
+		final var disturbanceNotEligibleForDelete = disturbanceRepository.findById(14L).get();
+		final var disturbanceEligibleForDelete = disturbanceRepository.findById(15L).get();
+
+		// Assert that both is older than 24 months.
+		assertThat(disturbanceEligibleForDelete.getCreated()).isBefore(expiryDate);
+		assertThat(disturbanceNotEligibleForDelete.getCreated()).isBefore(expiryDate);
+
+		// Act
+		disturbanceRepository.deleteByCreatedBeforeAndStatusIn(expiryDate, CLOSED);
+
+		// Assert
+		assertThat(disturbanceRepository.findById(disturbanceEligibleForDelete.getId())).isNotPresent();
+		assertThat(disturbanceRepository.findById(disturbanceNotEligibleForDelete.getId())).isPresent();
 	}
 
 	private void assertAsDisturbanceEntity2(final DisturbanceEntity disturbanceEntity) {
 
 		assertThat(disturbanceEntity.getId()).isEqualTo(2);
-		assertThat(disturbanceEntity.getCategory()).isEqualTo(COMMUNICATION.toString());
-		assertThat(disturbanceEntity.getCreated()).isEqualTo(getOffsetDateTime(2021, 9, 23, 9, 05, 48, 198000000));
-		assertThat(disturbanceEntity.getUpdated()).isEqualTo(getOffsetDateTime(2021, 9, 24, 9, 05, 48, 298000000));
+		assertThat(disturbanceEntity.getCategory()).isEqualTo(COMMUNICATION);
+		assertThat(disturbanceEntity.getCreated()).isEqualTo(getOffsetDateTime(2021, 9, 23, 9, 5, 48, 198000000));
+		assertThat(disturbanceEntity.getUpdated()).isEqualTo(getOffsetDateTime(2021, 9, 24, 9, 5, 48, 298000000));
 		assertThat(disturbanceEntity.getDescription()).isEqualTo("Description");
 		assertThat(disturbanceEntity.getDisturbanceId()).isEqualTo("disturbance-2");
 		assertThat(disturbanceEntity.getPlannedStartDate()).isEqualTo(getOffsetDateTime(2021, 12, 31, 11, 30, 45, 0));
-		assertThat(disturbanceEntity.getPlannedStopDate()).isEqualTo(getOffsetDateTime(2022, 01, 11, 11, 30, 45, 0));
+		assertThat(disturbanceEntity.getPlannedStopDate()).isEqualTo(getOffsetDateTime(2022, 1, 11, 11, 30, 45, 0));
 
-		assertThat(disturbanceEntity.getStatus()).isEqualTo(OPEN.toString());
+		assertThat(disturbanceEntity.getStatus()).isEqualByComparingTo(OPEN);
 		assertThat(disturbanceEntity.getTitle()).isEqualTo("Title");
 		assertThat(disturbanceEntity.getAffectedEntities()).hasSize(3);
 		// Affected 1
@@ -247,13 +271,13 @@ class DisturbanceRepositoryTest {
 
 		final var entity = new DisturbanceEntity();
 		entity.setDisturbanceId(disturbanceId);
-		entity.setCategory(COMMUNICATION.toString());
+		entity.setCategory(COMMUNICATION);
 		entity.setTitle("title");
 		entity.setDescription("description");
-		entity.setStatus(OPEN.toString());
-		entity.setPlannedStartDate(OffsetDateTime.now());
-		entity.setPlannedStopDate(OffsetDateTime.now().plusDays(6));
-		entity.addAffectedEntities(Arrays.asList(affectedEntity));
+		entity.setStatus(OPEN);
+		entity.setPlannedStartDate(now(systemDefault()));
+		entity.setPlannedStopDate(now(systemDefault()).plusDays(6));
+		entity.addAffectedEntities(List.of(affectedEntity));
 
 		return entity;
 	}
